--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>hello world</h1>
+    <div class="goat-head">
+        <h1><span class="h1-the">The</span> GOAT</h1>
+    </div>
 </body>
 </html>
