finish conceptual session

--- a/index.html
+++ b/index.html
@@ -5,10 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic html session</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/2469/2469723.png" type="image/x-icon">
 </head>
 <body>
     <div class="goat-head">
         <h1><span class="h1-the">The</span> GOAT</h1>
     </div>
+
+    <div class="article">
+        <h2>The Awesome Goat: A Tough and Cool Animal!</h2>
+
+<p>Goats are amazing animals that have been with humans for a super long time, around 10,000 years! Imagine having a friend that has been around since ancient times – that's the goat for you!
+
+These furry pals are not just cute; they're super helpful too. Farmers love them because they eat all sorts of plants, even in places where it's hard for other animals to live. They're like nature's lawnmowers, keeping everything neat and tidy. 
+
+Goats also give us yummy things like milk, which is super healthy, and their wool is used for cozy clothes. They're like little factories of goodness!
+
+What's really cool about goats is that they can live in all kinds of places, from hot deserts to high mountains. They're like the superheroes of the animal world! And guess what? They hardly ever get sick. Talk about tough!
+
+People from a long time ago even thought goats were magical. They included them in stories about gods and goddesses. So, goats are not just our animal buddies; they're kind of like legends too!
+
+So, next time you see a goat, remember they're not just cute – they're like the superheroes of the animal kingdom, helping us in so many awesome ways!</p>
+    </div>
+
+    <div class="goat-types">
+        <h2>Types of goat</h2>
+        <div class="goat-img">
+            <div>
+                <img src="https://images.unsplash.com/photo-1556032743-8c344a7b5f0d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Z29hdCUyMHBvcnRyYWl0fGVufDB8fDB8fHww" alt="">
+            </div>
+            <div>
+                <img src="https://images.unsplash.com/photo-1624806972468-ea9c923a425e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8Z29hdCUyMHBvcnRyYWl0fGVufDB8fDB8fHww" alt="">
+            </div>
+            <div>
+                <img src="https://images.unsplash.com/photo-1450820900803-38abb1b52bbe?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8Z29hdCUyMHBvcnRyYWl0fGVufDB8fDB8fHww" alt="">
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
